# faimGraph

./: .gitignore  CMakeLists.txt  README.markdown  SetupScript.py  configuration.xml  setup.sh
include/: COO.h  CSR.h  CSVWriter.h  ConfigurationParser.h  Definitions.h  EdgeDeletion.cuh  EdgeInsertion.cuh  EdgeQuery.cuh  EdgeUpdate.h  EdgeUpdateConcurrent.cuh  EdgeUtility.cuh  GraphParser.h  MemoryLayout.h  MemoryManager.cuh  MemoryManager.h  Queue.h  SpMM.h  SpMV.h  Utility.h  Vector.h  VertexDeletion.cuh  VertexInsertion.cuh  VertexMapper.h  VertexUpdate.h  aimGraph.h  dCSR.h  faimGraph.cuh  faimGraph.h
include/algorithms/: BFS.h  BetweennessCentrality.h  ClusteringCoefficients.cuh  ClusteringCoefficients.h  ConnectedComponents.h  PageRank.cuh  PageRank.h  STC.cuh  STC.h  StaticTriangleCounting.h
src/: COO.cpp  CSR.cpp  CSVWriter.cpp  ConfigurationParser.cpp  EdgeDeletion.cu  EdgeInsertion.cu  EdgeQuery.cu  EdgeUpdate.cpp  EdgeUpdate.cu  EdgeUtility.cu  GraphParser.cpp  Instantiations.cu  MemoryManager.cpp  MemoryManager.cu  SpMM.cu  SpMV.cu  Utility.cpp  Utility.cu  VertexDeletion.cu  VertexInsertion.cu  VertexUpdate.cpp  VertexUpdate.cu  VertexUtility.cu  aimGraph.cpp  aimGraph.cu  dCSR.cpp  faimGraph.cpp  faimGraph.cu  main.cpp
src/algorithms/: BFS.cpp  BFS.cu  BetweennessCentrality.cpp  BetweennessCentrality.cu  ClusteringCoefficients.cpp  ClusteringCoefficients.cu  ConnectedComponents.cpp  ConnectedComponents.cu  PR.cpp  PageRank.cpp  PageRank.cu  STC.cpp  STC.cu  StaticTriangleCounting.cpp  StaticTriangleCounting.cu
src/tests/: ContinuousTC.cpp  SpMV.cpp  concurrentTC.cpp  dynamicVerticesMain.cpp  queryTC.cpp  reInitTC.cpp
tests/: allGraphs.xml  bfs.xml  concurrentTC.xml  config.xml  dynamicVertices.xml  largetest.xml  pagerank.xml  querytest.xml  spmv.xml  standardcontinuoustest.xml  standardlargetest.xml  standardsmalltest.xml  standardsmallverification.xml  standardvswarpsized.xml  stc.xml  testnewgraphs.xml  verification.xml  verifyMemoryLayoutMetaModes.xml  vertexcentriclargetest.xml  vertexcentricsmalltest.xml  vertexcentricsmallverification.xml  vertexcentricsortedlargetest.xml  vertexcentricsortedsmalltest.xml  vertexcentricsortedsmallverification.xml  warpsizedlargetest.xml  warpsizedsmalltest.xml  warpsizedsmallverification.xml
